Make web-app-demo a module in the project